@@ -1,17 +1,17 @@
 test_that("plot RDA/CCA", {
   data("Tengeler2020", package = "mia")
   tse <- Tengeler2020
-  
+
   ### 1). TEST error messages ###
-  
+
   # Object without reducedDim
   expect_error(plotRDA(tse), 'argument "dimred" is missing, with no default')
   expect_error(plotRDA(tse, "RDA"), "'dimred' must specify reducedDim.")
-  
+
   # Run/calculate RDA
   tse <- addRDA(tse, formula = assay ~ patient_status + cohort)
   rda <- getRDA(tse, formula = assay ~ patient_status + cohort)
-  
+
   # Minimal functionality
   expect_no_error(plotRDA(tse, "RDA"))
 
@@ -33,7 +33,7 @@ test_that("plot RDA/CCA", {
   ## add more tests here
 
   ### 2). TEST plot layers ###
-  
+
   el_true <- plotRDA(tse, "RDA", colour_by = "patient_status")
   el_false <- plotRDA(tse, "RDA", colour_by = "patient_status", add.ellipse = FALSE)
   el_col <- plotRDA(tse, "RDA", colour_by = "patient_status", add.ellipse = "colour")
@@ -49,7 +49,7 @@ test_that("plot RDA/CCA", {
   # Coloured ellipse but not filled ellipse plot has all 0 alpha values
   expect_true(all(ggplot_build(el_col)[["data"]][[2]][["alpha"]] == 0))
   expect_false(all(ggplot_build(el_fill)[["data"]][[2]][["alpha"]] == 0))
-  
+
   # Check ggplot aesthetics
   p_aes <- plotRDA(tse, "RDA", colour_by = "patient_status", ellipse.alpha = 0.5,
                    ellipse.linewidth = 0.2, ellipse.linetype = 3, vec.size = 0.6,
@@ -70,7 +70,7 @@ test_that("plot RDA/CCA", {
   expect_true(all(p_aes_build[[4]][["size"]] == 5))
   # Where is arrow size stored?
   # expect_true(arrow_size == 0.15)
-  
+
   # Vector or label text
   p_vec <- plotRDA(tse, "RDA", colour_by = "patient_status", vec.text = TRUE)
   p_lab <- plotRDA(tse, "RDA", colour_by = "patient_status", vec.text = FALSE)
